# GAI-S-Governed-AI-Infrastructure-Standard

./: .gitignore  CHANGELOG.md  DEVLOG.md  IMPLEMENTATION_AUDIT_PLAN.md  LICENSE  README.md  TRACEABILITY_MATRIX.md
certifications/: GAIS-CERT-AURABREE-L2-2027-001.docx  GAIS-REG-001-Certification-Registry.docx
engine/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json
engine/adapters/fastapi/: README.md  main.py  pyproject.toml
engine/adapters/fastapi/gais_fastapi_adapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
engine/adapters/fastapi/tests/: test_main.py
reference-architecture/authority-separation/: README.md  human-in-loop-pattern.md
reference-architecture/cri-model/: README.md  cri-risk-engine.md
reference-architecture/drift-detection/: README.md  drift-monitoring-pattern.md
reference-architecture/escalation-pathways/: README.md
reference-architecture/trust-boundaries/: README.md
standard/: GAIS-GOV-001-Certification-Governance-Model.docx  GAIS_Standard_Documentation_v1.0.docx  authority-separation-spec.md  certification-governance-model.md  certification-tier-specification.md  domain-specifications.md  governance-control-matrix.md  minimum-enforceable-architecture.md  versioning-policy.md
standard/regulatory-alignment/: eu-ai-act-alignment.md  iso-42001-alignment.md  nist-rmf-alignment.md
templates/: authority-boundary-template.md  compliance-binder-index.md  documentation-readiness-checklist.md  governance-board-charter-template.md  incident-response-template.md  risk-classification-matrix.md
(+14 files in other folders)
